refactor: replace Object[] analytics mappings with typed projections